[metadata]
name = xlmerge
version = 1.0.0
author = june3474
author_email = june3474@gmail.com
description = Tool for merging Excel files and sheets
long_description = file: README.org
url = https://github.com/june3474/xlmerge
license = MIT
platforms = Windows
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    # Environment :: Console
	Environment :: Win32 (MS Windows) :: Qt
	# Environment :: X11 Applications :: Qt
    # Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    # Programming Language :: Python :: 2.7
    # Programming Language :: Python :: 3.5
    # Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
python_requires = >=3.1
zip_safe = False
packages = find:
include_package_data = True
package_dir =
	= .
install_requires =
    PyQt5
    pywin32
    xlwings>0.25.0
    openpyxl>=3.0.9
setup_requires = pip
tests_require = pytest

[options.packages.find]
where = .
exclude =
    docs
    tests
    tests.*

[options.package_data]
* = addin.template, Excel.officeUI

[options.exclude_package_data]
# ;* = *.c, *.so, *.js

[options.entry_points]
#console_scripts =
#    xlmerge = xlmerge.xlmerge:main
gui_scripts =
    xlmerge = xlmerge.xlmerge:main

[options.extras_require]

[aliases]
docs = build_sphinx
release = sdist bdist_wheel upload
test = pytest

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build
